<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jwray.jwraywines.WineInformationActivity" >
    
    <item
        android:id="@+id/pronounce"
        android:icon="@drawable/ic_action_volume_on"
        android:title="@string/play_sound"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/add_note"
        android:icon="@drawable/ic_action_new"
        android:title="@string/new_note"
        app:showAsAction="ifRoom"/>
    <!-- 
    <item
        android:id="@+id/share"
        android:title="@string/shareText"
        android:icon="@drawabld/icon_share"
        app:showAsAction="ifRoom"/>
    -->
    <item
        android:id="@+id/fav"
        android:title="@string/fav"
        android:icon="@drawable/ic_action_good"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/unfav"
        android:title="@string/unfav"
        android:icon="@drawable/ic_action_bad"
        app:showAsAction="ifRoom"/>

</menu>
