<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="@drawable/background"
    sothree:panelHeight="68dp"
    sothree:shadowHeight="4dp">

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

	    <EditText
	        android:id="@+id/wineSearchView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:background="@drawable/rounded_edit"
	        android:focusableInTouchMode="true"
	        android:hint="@string/wineSearchHint"
	        android:includeFontPadding="true"
	        android:inputType="text"
	        android:padding="20dp"
	        android:drawableRight="@drawable/arrow_right">
	        
	        </EditText>
	        
	</LinearLayout>
	
	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center" >
	        
	        <TextView
	        	android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/handle"
		        android:gravity="center|top"
		        android:text="@string/slideUpText"
		        android:padding="30dp"
		        android:textSize="16sp"
		        android:textColor="@color/White" />
	        
	        <TextView
		        android:id="@+id/favoriteEmpty"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/favorite_empty"/>
	        
	        <GridView
		        android:id="@+id/favoriteView"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:numColumns="auto_fit">
	    </GridView>
        
        
    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>
    